--- a/semantic-search-frontend/templates/search_form.html
+++ b/semantic-search-frontend/templates/search_form.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
   </head>
   <body>
-    <img id="logo" src="/static/images/logo.png" alt="A description of the image">
+    <img id="logo" src="/static/images/search.png" alt="A description of the image">
 
     <form action="/search" method="GET">
       <input type="text" id="query" name="query">
